added pics and grid

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel= "stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet"> <!--google fonts-->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -35,6 +36,41 @@
         </nav>
     
       </header>
+ 
+      <section class = "container">
+        <h1>Portfolio</h1> 
+        <div class = "row"> 
+          <div class="col-md-6"> 
+              <img src="assets/question mark.jfif" alt="word guess image" class="imageSize">
+              <div class = "pictureText">Word Guess</div>
+          </div>
+
+          <div class="col-md-6">
+            <img src="assets/RPG.png" alt="RPG game image" class="imageSize">
+            <div class = "pictureText">RPG Game</div>
+          </div>
+        </div>
+
+        <div class = "row"> 
+          <div class="col-md-6"> 
+            <img src="assets/trivia.jpg" alt="trivia image" class="imageSize">
+            <div class = "pictureText">Trivia Game</div>
+          </div>
+          <div class="col-md-6">
+            <img src="assets/Widget.jpg" alt="widget image" class="imageSize">
+            <div class = "pictureText">Info Widget</div>
+          </div>
+        </div>
+
+        <div class = "row"> 
+          <div class="col-md-6">
+            <img src="assets/RPS.png" alt="RPS image" class="imageSize">
+            <div class = "pictureText">Rock Paper Scissors</div>
+          </div>
+        </div>
+
+
+      </section>
 
     
 </body>
