--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>My Portfolio</title>
+    <title>About</title>
   
   <link rel= "stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet"> <!--google fonts-->
   <link rel="stylesheet" href="css/style.css">
 
 
@@ -40,10 +41,17 @@
 
   </header>
 
+  <section class="container">
+    <h1>About Me</h1>
 
-  <section>
-  
+    <img src="assets/Picture.jpg" alt="picture of me" class="imageSize" id="profilePic">
+    <p>Here is my profile pic. I need to find another picture to use for these things.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolores dolorum a obcaecati, officia molestias adipisci, doloribus, voluptas deserunt cupiditate vitae ab eius repudiandae maiores quis sint explicabo consequuntur rem.</p>
+
+
+
   </section>
+
 
   
 
