clean up message box and clearfix on picture

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <img src="assets/Picture.jpg" alt="picture of me" class="imageSize" id="profilePic">
     <p>Here is my profile pic. I need to find another picture to use for these things.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolores dolorum a obcaecati, officia molestias adipisci, doloribus, voluptas deserunt cupiditate vitae ab eius repudiandae maiores quis sint explicabo consequuntur rem.</p>
+    <p class="group">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolores dolorum a obcaecati, officia molestias adipisci, doloribus, voluptas deserunt cupiditate vitae ab eius repudiandae maiores quis sint explicabo consequuntur rem.</p>
 
 
 
