--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@
             </div>
 
             <div class="form-group">
-                <label for="formGroupExampleInput">Message</label>
-                <input type="text" class="form-control" id="formGroupExampleInput">
-              </div>
+              <label for="exampleFormControlTextarea1">Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+            </div>
            
 
             
