add container to contact page

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
   </header>
 <h1>Contact</h1>
     <section>
-
+      <div class="container">
         <form>
             <div class="form-group">
                 <label for="formGroupExampleInput">Name</label>
@@ -58,7 +58,7 @@
             
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
-
+        </div>
     </section>
 </body>
 </html>
