--- a/index.html
+++ b/index.html
@@ -32,21 +32,24 @@
         </ul>
       </div>
     </nav>
+
   </header>
 
   <section class="container">
     <h1>About Me</h1>
 
     <img src="assets/Picture.jpg" alt="picture of me" class="portfolioSize" id="profilePic">
-    <p>Here is my profile pic. I need to find another picture to use for these things.</p>
-    <p class="group">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolores dolorum a obcaecati, officia molestias adipisci, doloribus, voluptas deserunt cupiditate vitae ab eius repudiandae maiores quis sint explicabo consequuntur rem.</p>
+    <p>My name is Brent Peterson. For the last 10 years I have been working in finance and have helped build up two awesome companies.  The first company is a renewable energy developer and independent power producer called <a href = "spower.com">sPower</a>.  I was on the founding team and help bring the company from eight employees to over 150 employees.  As a team, we developed, built and financed 1.5 GWs of renewable energy and then sold the company to AES and AIMCo for <a href = "https://www.pv-tech.org/news/aes-and-aimco-to-acquire-spower-for-us1.58-billion">$1.6 billion</a>.  The second company is an impact investment group called <a href = "cicerocap.com">Cicero Impact Capital</a>.  I ran the structuring and negotiation of investments and lead the investment of $2 million into a dialysis clinic company in Mexico in 2020.     </p>
+ 
+   
+    <p class="group">I am looking to make a career switch into tech and see lots of opportunities to use the skills and experiences I have had in my career to build some great companies. </p>
 
 
-
+    <hr style="width:90%;text-align:center">
 
 
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-1">
       <h5>linkedin: </h5>
     </div>
     <div class="col-md-10"><h5><a href="https://www.linkedin.com/in/brentjpeterson/" target="_blank">view</a></h5>
@@ -55,7 +58,7 @@
 
 
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-1">
       <h5>github: </h5>
     </div>
     <div class="col-md-10"><h5><a href="https://github.com/brentp24" target="_blank">view</a></h5>
@@ -64,7 +67,7 @@
 
 
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-1">
       <h5>resume: </h5>
     </div>
     <div class="col-md-10"><h5><a href="https://drive.google.com/file/d/1D-zPyitRKOkfVtxMx3Ia3Ga_b2S5dFOH/view?usp=sharing"
@@ -74,7 +77,7 @@
 
 
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-1">
         <h5>email: </h5>
       </div>
       <div class="col-md-10"><h5><a href="mailto:brentp24@gmail.com">brentp24@gmail.com</a></h5>
@@ -82,7 +85,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-1">
       <h5>phone: </h5>
     </div>
     <div class="col-md-10"><h5><a href="tel:801-361-0502">(801) 361-0502</a></h5>
@@ -96,7 +99,7 @@
 
 <p>Copyright &copy; 2020</p>
 </footer>
-<!-- jquery -->
+<!-- jquery and other javascript plugins -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
