added covid analysis

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
     <h1>Portfolio</h1>
     <div class="row">
   
-      <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/web-apis-homework';">
-        <img src="assets/trivia.jpg" alt="Coding Quiz Image" class="imageSize center">
-        <div class="pictureText center">Coding Quiz</div>
+      <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/covid-state-by-state/';">
+        <img src="assets/Covid.jpg" alt="Covid-19 Growth" class="imageSize center">
+        <div class="pictureText center">Covid-19 Growth Analysis</div>
       </div>
 
       <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/strtUP';">
@@ -60,6 +60,14 @@
       <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/weatherapp';">
         <img src="assets/Weather.jpg" alt="widget image" title="photo from Johannes Plenio" class="imageSize center">
         <div class="pictureText center">Weather App</div>
+      </div>
+    </div>
+
+    <div class="row">
+  
+      <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/web-apis-homework';">
+        <img src="assets/trivia.jpg" alt="Coding Quiz Image" class="imageSize center">
+        <div class="pictureText center">Coding Quiz</div>
       </div>
     </div>
 
