--- a/portfolio.html
+++ b/portfolio.html
@@ -15,30 +15,31 @@
 </head>
 
 <body>
-<!-- navbar -->
-<header>  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Brent Peterson</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+  <!-- navbar -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">Brent Peterson</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
   <section class="container">
     <h1>Portfolio</h1>
     <div class="row">
-  
+
       <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/covid-state-by-state/';">
         <img src="assets/Covid.jpg" alt="Covid-19 Growth" class="imageSize center">
         <div class="pictureText center">Covid-19 Growth Analysis</div>
@@ -49,48 +50,55 @@
         <div class="pictureText center">Coding Quiz</div>
       </div>
 
-
-    <div class="row">
-      <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/brents-daily-planner';">
-        <img src="assets/planner.jpg" alt="daily planner image" class="imageSize center" title = "photo from NORTHFOLK">
-        <div class="pictureText center">Daily Planner</div>
-      </div>
-
-
-      <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/weatherapp';">
-        <img src="assets/Weather.jpg" alt="widget image" title="photo from Johannes Plenio" class="imageSize center">
-        <div class="pictureText center">Weather App</div>
-      </div>
     </div>
 
-    <div class="row">
-  
+      <div class="row">
+        <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/brents-daily-planner';">
+          <img src="assets/planner.jpg" alt="daily planner image" class="imageSize center" title="photo from NORTHFOLK">
+          <div class="pictureText center">Daily Planner</div>
+        </div>
 
 
-      <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/strtUP';">
-        <img src="assets/Widget.jpg" alt="strtUP Dashboard" class="imageSize center">
-        <div class="pictureText center">strtUP Dashboard</div>
+        <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/weatherapp';">
+          <img src="assets/Weather.jpg" alt="widget image" title="photo from Johannes Plenio" class="imageSize center">
+          <div class="pictureText center">Weather App</div>
+        </div>
       </div>
-    </div>
 
-    </div>
+      <div class="row">
+
+
+
+        <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/strtUP';">
+          <img src="assets/Widget.jpg" alt="strtUP Dashboard" class="imageSize center">
+          <div class="pictureText center">strtUP Dashboard</div>
+
+        </div>
+
+      </div>
 
 
 
 
   </section>
-  <footer class = "footer bg-dark">
+  <footer class="footer bg-dark">
     <p>site made by <a href="https://github.com/brentp24" target="_blank">Brent Peterson</a></p>
 
     <p>Copyright &copy; 2020</p>
     <div id="backgroundPhotographer" class="column"></div>
-    </footer>
-<!-- javascript add ins -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="main.js"></script>
+  </footer>
+  <!-- javascript add ins -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
