--- a/portfolio.html
+++ b/portfolio.html
@@ -59,15 +59,21 @@
     </div>
 
       <div class="row">
-        <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/brents-daily-planner';">
+        <div class="col-md-4" onclick="window.location.href = 'https://brentp24.github.io/brents-daily-planner';">
           <img src="assets/planner.jpg" alt="daily planner image" class="imageSize center" title="photo from NORTHFOLK">
           <div class="pictureText center">Daily Planner</div>
         </div>
 
 
-        <div class="col-md-6" onclick="window.location.href = 'https://brentp24.github.io/weatherapp';">
-          <img src="assets/Weather.jpg" alt="widget image" title="photo from Johannes Plenio" class="imageSize center">
+        <div class="col-md-4" onclick="window.location.href = 'https://brentp24.github.io/weatherapp';">
+          <img src="assets/Weather.jpg" alt="photo from Johannes Plenio" title="photo from Johannes Plenio" class="imageSize center">
           <div class="pictureText center">Weather App</div>
+        </div>
+
+
+        <div class="col-md-4" onclick="window.location.href = 'https://polar-reaches-63897.herokuapp.com/';">
+          <img src="assets/grocery-bag.jpg" alt="Photo by nrd on Unsplash" title="Photo by nrd on Unsplash" class="imageSize center">
+          <div class="pictureText center">Pantree</div>
         </div>
       </div>
 
