--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="col-sm-1">
       <h5>resume: </h5>
     </div>
-    <div class="col-md-10"><h5><a href="https://drive.google.com/file/d/1D-zPyitRKOkfVtxMx3Ia3Ga_b2S5dFOH/view?usp=sharing"
+    <div class="col-md-10"><h5><a href="https://drive.google.com/open?id=1ve7f4lflkSsEhZRRreik8T83_437NKPD"
       target="_blank">view</a></h5>
       </div>
     </div>
